# easyCICD

./: .env.example  .gitignore  API_통신_명세서.md  ARCHITECTURE.md  GitHub_OAuth_통합_계획.txt  README.md  README.txt  REPOSITORY_API_명세서.md  TODO.txt  claude_instructions.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  logrotate.conf  prj1.yml  reset-db.sh  개발_진행_상황.txt  오답노트.txt  최종_설계_문서.txt
agent/: Cargo.toml  Dockerfile
agent/migrations/: 001_initial.sql  002_add_protocol_type.sql  002_settings.sql  003_add_container_status_pulling_starting.sql  003_deploy_logs.sql  003_github_pat.sql  004_add_project_env_vars.sql  004_working_directory.sql  005_add_github_webhook_id.sql  006_add_auth_tables.sql  007_add_github_pats.sql  008_add_discord_notifications.sql
agent/src/: events.rs  main.rs  state.rs  ws_broadcaster.rs
agent/src/api/: auth.rs  builds.rs  containers.rs  discord_webhooks.rs  github_api.rs  mod.rs  projects.rs  settings.rs  terminal.rs  webhook.rs  ws.rs
agent/src/application/: mod.rs
agent/src/auth/: config.rs  mod.rs
agent/src/db/: mod.rs  models.rs  queries.rs
agent/src/docker/: client.rs  mod.rs
agent/src/github/: client.rs  config_builder.rs  detector.rs  mod.rs  models.rs  workflow_interpreter.rs  workflow_parser.rs
agent/src/infrastructure/: mod.rs
agent/src/proxy/: mod.rs  router.rs
agent/src/state/: app_context.rs  build_queue.rs  mod.rs  ws_connections.rs
agent/src/workers/: container_cleanup.rs  container_health_monitor.rs  container_log_streamer.rs  mod.rs  port_scanner.rs  session_cleanup.rs
docs/: bugfix-notes.md
(+75 files in other folders)
