[package]
name = "lightweight-ci"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# WebSocket
tokio-tungstenite = "0.28"

# Reverse Proxy
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Docker API
bollard = "0.19"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Crypto (for webhook verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

# Glob pattern matching
globset = "0.4"

# Random generation
rand = "0.8"

# Base64 decoding
base64 = "0.21"

# YAML parsing
serde_yaml = "0.9"

# OAuth2
oauth2 = "4.4"
dotenvy = "0.15"

# Cookies
tower-cookies = "0.11"

